--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,1 +1,11 @@
 @import '~antd/dist/antd.css';
+
+.app, #root{
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
